# FluxLang

./: .gitignore  CMakeLists.txt  ast_design_prompt.txt  atomic.fx  collections.fx  decimal.fx  design_prompt.txt  doc.md  example1.fx  example2.fx  example3.fx  example4.fx  example5.fx  example6.fx  fast.py  fast3.py  fc.py  flexer.py  flexer3.py  flux_bnf.txt  flux_compiler.py  flux_grammar  flux_grammar.txt  flux_lark.bnf  flux_lark.bnf.txt  foutput.py  fparser.py  fparser2.py  fparser3.py  ftyper.py  geometry.fx  grammar1.bnf  io.fx  language.txt  language2.txt  language3.txt  language_specification.txt  language_specification_simplified.txt  lexer.py  lexer_design_prompt.txt  (+26 more)
Sublime/: Flux.sublime-syntax  Flux.tmPreferences
cmake/: FluxConfig.cmake.in
docs/: Doxyfile.in  grammar-doc.md  language-spec.md  language.txt  language_specification.md  language_specification_simplified.md
editor-support/: README.md
editor-support/sublime/: Flux.sublime-syntax  Flux.tmPreferences
examples/: example1.fx  example2.fx  example3.fx  example4.fx  example5.fx  example6.fx  hello_world.fx  hex_test.fx  master_example.fx  sha256.fx  sha256_simple.fx  sha256_simple_test.fx  simple_test.fx  test.fx  using_test.fx
src/: CMakeLists.txt  ast.cpp  builtins.cpp  error.cpp  forwards.hpp  interpreter.cpp  lexer.cpp  main.cpp  parser.cpp  runtime.cpp  runtime_utils.cpp  typechecker.cpp
src/common/: arena.cpp  arena.h  error.cpp  error.h  source.cpp  source.h
src/compiler/: fast.py  fc.py  flexer.py  fparser.py
src/examples/: complex_calc.fx  helloworld.fx  vectors.fx  whenfib.fx
src/include/: ast.h  builtins.h  error.h  interpreter.h  lexer.h  parser.h  runtime.h  typechecker.h
src/interpreter/: core_fwd.hpp  environment.hpp  interpreter.cpp  interpreter.hpp  value.hpp
src/lexer/: lexer.cpp  lexer.hpp  token.cpp  token.h  token.hpp  tokenizer.cpp  tokenizer.h
src/llvm/: llvm_codegen.cpp  llvm_codegen.h
src/output/: writer.cpp  writer.h
src/parser/: ast.cpp  ast.h  ast.hpp  expressions.hpp  parser.cpp  parser.cpp.bak  parser.h  parser.hpp  parser2.cpp  parser2.h  parser_implementations.cpp  parser_methods.cpp  statements.hpp
src/stdlib/: io.fx  standard.fx  types.fx
src/type/: type.h  type_checker.cpp  type_checker.h
tests/: CMakeLists.txt  interpreter_tests.cpp  lexer_tests.cpp  parser_tests.cpp  test  types
